Archive2/37/7163e11addf09f/output
main.cpp: In constructor ‘Shibe::Shibe(Args ...)’:
main.cpp:18:46: error: type/value mismatch at argument 1 in template parameter list for ‘template<class _Signature> class std::function’
             std::function<ReturnType(args...)> f;
                                              ^
main.cpp:18:46: error:   expected a type, got ‘(ReturnType)(args ...)’
main.cpp:18:49: error: invalid type in declaration before ‘;’ token
             std::function<ReturnType(args...)> f;
                                                 ^
